# nemotron-voice-agent

./: .coderabbit.yaml  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.jetson.yml  docker-compose.yml  env.example  env.jetson.example  examples_registry.yaml  pipeline.py  prompt.yaml  pyproject.toml  services.local.yaml  sonar-project.properties  third_party_oss_license.txt
.agents/skills/configure-pipeline/: SKILL.md
.agents/skills/deploy/: SKILL.md
.agents/skills/nemotron-voice-agent-deploy/: SKILL.md
.github/workflows/: ci.yml
benchmarking_tools/AA-BigBenchAudio-Eval/: README.md  analyze_results.py  convert_to_audio.py  download_dataset.py  eval.py  find_invalid_results.py  speech-inference.py  text-inference.py  transcribe.py
benchmarking_tools/Full-Duplex-Bench-Eval/: README.md  inference.py
benchmarking_tools/scaling-perf/: README.md  benchmark.py  perf_prompts.yaml  simulate_concurrency.sh
client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  api.ts  main.tsx  utils.ts
client/src/components/: Header.tsx  ModelSelector.tsx  PanelSection.tsx  PipelineExampleSelector.tsx  PipelineModeSelector.tsx  PromptSelector.tsx  S2SModelSelector.tsx  Sidebar.tsx  ToolsSection.tsx  TransportSelector.tsx  VoiceLevelVisualizer.tsx  VoiceSettings.tsx  WebcamVisionPanel.tsx
client/src/context/: AppContext.tsx  app-context.ts  useApp.ts
client/src/hooks/: useConnectionState.ts  useConversationMessages.ts
client/src/styles/: nvidia-theme.scss
config/: env.example  env.jetson.example
docker/: Dockerfile  docker-compose.chatterbox-tts.yaml  docker-compose.coturn.yaml  docker-compose.magpie-tts.yaml  docker-compose.nemotron-asr.yaml  docker-compose.nemotron3-nano.yaml  docker-compose.nemotron3-omni.yaml  docker-compose.nemotron3-super.yaml  docker-compose.parakeet-asr.yaml  docker-compose.phoenix.yaml  docker-compose.speech-jetson.yaml
docs/: 01-getting-started.md  02-configuration-guide.md  03-jetson-thor.md  03-multilingual.md  04-best-practices.md  04-evaluation-and-performance.md  04-jetson-thor.md  05-best-practices.md  05-nvidia-pipecat.md  05-speculative-speech-processing.md  06-best-practices.md  06-evaluation-and-performance.md  06-troubleshooting.md  07-nvidia-pipecat.md  BEST_PRACTICES.md  CUSTOMIZATION_GUIDE.md  JETSON_THOR.md  MULTILINGUAL.md  SPECULATIVE_SPEECH_PROCESSING.md  pipecat-upgrade-changelog.md
docs/how-to/: choose-transport-method.md  configure-asr.md  configure-llm.md  configure-prompts.md  configure-services.md  configure-tts-settings.md  configure-tts.md  enable-audio-recorder.md  enable-multilingual.md  enable-opentelemetry-tracing.md  enable-turn-server.md  enable-zero-shot-tts.md  run-scaling-perf-tests.md  switch-llm-models.md  tune-pipeline-performance.md
evals/ci/: ci_bot.py  manifest.yaml  smoke.py
evals/ci/scenarios/: ci_echo.yaml  ci_multi_turn.yaml
evals/service/: frontend_backend_manifest.yaml  generic_audio_manifest.yaml  generic_manifest.yaml  manifest.yaml  multilingual_audio_manifest.yaml  multilingual_manifest.yaml  omni_manifest.yaml
evals/service/runner_bodies/: frontend_backend_default.json  generic_audio_default.json  generic_default.json  generic_flowershop.json  generic_without_tools.json  multilingual_audio_fixed_english.json  multilingual_fixed_english.json  omni_default.json  (+2 more)
frontend/: Dockerfile  README.md  start-server.py  third_party_oss_license.txt
frontend/webrtc_ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
notebooks/: brev_docker_launch.ipynb  brev_launchable.ipynb
scripts/: start-mps.sh  stop-mps.sh
skills/configure-pipeline/: SKILL.md
skills/deploy/: SKILL.md
skills/upgrade-pipecat/: SKILL.md
src/: __init__.py  attachment_store.py  config_store.py  eval_bot.py  examples_registry.py  pipeline.py  pipeline_websocket.py  runtime_platform.py  server.py  timeutils.py  tracing.py  utils.py  webcam_frame_store.py
src/cascaded/: __init__.py  tools.py
src/speech_to_speech/: __init__.py  nemotron_compat.py  nvcf_realtime.py  pipeline.py
tests/: test_activity_check.py  test_booking_state_helpers.py  test_frontend_backend_agent.py  test_multilingual_processor.py  test_multilingual_turn_strategy.py  test_omni_media_dispatch.py  test_omni_turn_preemption.py  test_pipeline_utils.py  test_prompt_catalog.py  test_service_catalog.py  test_session_languages.py  test_skills.py  test_thinker_talker.py
tests/unit/: test_activity_check.py
webrtc_ui/: package-lock.json
webrtc_ui/src/: App.tsx  VoiceSelector.tsx
(+318 files in other folders)
