[project]
name = "nemotron-voice-agent"
version = "0.1.0"
description = "Voice Agent Example"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "nvidia-pipecat",
    "pipecat-ai[silero,openai,runner,webrtc,websocket,nvidia]==0.0.98",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.14.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
nvidia-pipecat = { path = "./nvidia-pipecat", editable = true }
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120

###############################################################################
# Linting Rules
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstring checks
    "D"
]

ignore = ["SIM108"]

[tool.ruff.lint.pydocstyle]
convention = "google"
