[project]
name = "nemotron-voice-agent"
version = "2.0.0"
description = "End-to-end voice agent blueprint powered by NVIDIA Nemotron ASR, LLM, and TTS"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pipecat-ai[nvidia,silero,runner,webrtc,websocket,openai]==1.3.0",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "langchain-nvidia-ai-endpoints>=1.2.1",
]

# Force patched versions for known CVEs
[tool.uv]
override-dependencies = [
    "cryptography>=46.0.5",
    "idna>=3.15",
    "starlette>=1.0.1",
    "protobuf>=6.33.6",
    "langchain-core>=1.4.1",
    "uuid-utils>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pre-commit>=4.0.0",
    "pytest>=9.1.1",
]
# Dependencies for everything under `benchmarking_tools/`. Install with:
#   uv sync --group benchmark
benchmark = [
    "websockets>=14.0",
    "numpy>=2.0.0",
    "resampy>=0.4.3",
    "soundfile>=0.13.0",
    "aiohttp>=3.11.0",
    "requests>=2.32.0",
    "grpcio>=1.67.0",
    "nvidia-riva-client>=2.21.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

###############################################################################
# Linting Rules
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstring checks
    "D"
]

ignore = ["SIM108", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
